--- a/DEVIR4_ATL_SartonMike_CordierOlivier_MikolivatorV2/nbproject/project.properties
+++ b/DEVIR4_ATL_SartonMike_CordierOlivier_MikolivatorV2/nbproject/project.properties
@@ -78,7 +78,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=devir4_atl_sartonmike_cordierolivier_mikolivatorv2.DEVIR4_ATL_SartonMike_CordierOlivier_MikolivatorV2
+javafx.main.class=esi.atlir5.mikolivator.main.DEVIR4_ATL_SartonMike_CordierOlivier_MikolivatorV2
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
